// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen services config import-export] should create the services: the services have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ appprototype [serviceAppPrototype]
+ host [Host1]
+ application [Application1]
+ service [cfgObjectTest]
Completed. 4 object(s) imported.
",
}
`;

exports[`[mutagen services config import-export] should skip the same services: the services have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= application [Application1]
= appprototype [serviceAppPrototype]
= host [Host1]
= service [cfgObjectTest]
Completed. 4 object(s) imported.
",
}
`;

exports[`[mutagen services config import-export] should throw exception when new services to import miss mandatory properties services: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - service [cfgObjectTest]:
    - solutionType
    - version
",
  "stdout": "",
}
`;

exports[`[mutagen services config import-export] should throw exception when updating services with different values for unchangeable properties: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Unchangeable properties:
  - service [cfgObjectTest]:
    - solutionType
",
  "stdout": "",
}
`;

exports[`[mutagen services config import-export] should update the modified services: the modified services have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ service [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;
